--- a/src/application/MainMenu.fxml
+++ b/src/application/MainMenu.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 
-<AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="546.0" prefWidth="829.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainMenuController">
+<AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="546.0" prefWidth="829.0" stylesheets="@/style/buttons.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainMenuController">
 <children>
       <StackPane layoutX="135.0" layoutY="85.0" prefHeight="400.0" prefWidth="640.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -21,53 +21,52 @@
                <top>
                   <GridPane prefHeight="30.0" prefWidth="767.0" BorderPane.alignment="CENTER">
                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="120.0" minWidth="120.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="120.0" minWidth="120.0" prefWidth="120.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="120.0" minWidth="120.0" prefWidth="120.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="120.0" minWidth="120.0" prefWidth="120.0" />
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="524.0" minWidth="10.0" prefWidth="115.0" />
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints maxHeight="100.0" minHeight="100.0" prefHeight="100.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Button contentDisplay="TOP" graphicTextGap="1.0" maxHeight="100.0" maxWidth="100.0" minHeight="100.0" minWidth="100.0" mnemonicParsing="false" prefHeight="104.0" prefWidth="131.0">
+                        <Button id="rich-blue" contentDisplay="TOP" graphicTextGap="1.0" maxHeight="100.0" maxWidth="120.0" minHeight="100.0" minWidth="120.0" mnemonicParsing="false" prefHeight="104.0" prefWidth="120.0" stylesheets="@../style/buttons.css" text="Testler">
                            <graphic>
-                              <ImageView fitHeight="54.0" fitWidth="50.0">
+                              <ImageView fitHeight="62.0" fitWidth="60.0" preserveRatio="true">
                                  <image>
-                                    <Image url="@../../../store/StoreKeeper/src/icon/employeRed.png" />
+                                    <Image url="@../ico/sign-up.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic></Button>
+                        <Button id="rich-blue" contentDisplay="TOP" graphicTextGap="0.0" maxHeight="100.0" maxWidth="120.0" minHeight="100.0" minWidth="120.0" mnemonicParsing="false" prefHeight="108.0" prefWidth="120.0" text="Raporlar" textAlignment="CENTER" GridPane.columnIndex="1">
+                           <graphic>
+                              <ImageView fitHeight="62.0" fitWidth="60.0" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../ico/reports.png" />
                                  </image>
                               </ImageView>
                            </graphic>
                         </Button>
-                        <Button contentDisplay="TOP" graphicTextGap="0.0" maxHeight="100.0" maxWidth="100.0" minHeight="100.0" minWidth="100.0" mnemonicParsing="false" prefHeight="108.0" prefWidth="137.0" GridPane.columnIndex="1">
+                        <Button id="rich-blue" contentDisplay="TOP" graphicTextGap="0.0" maxHeight="100.0" maxWidth="120.0" minHeight="100.0" minWidth="120.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="120.0" text="Gelir-Gider" GridPane.columnIndex="2">
                            <graphic>
-                              <ImageView fitHeight="42.0" fitWidth="42.0">
+                              <ImageView fitHeight="62.0" fitWidth="60.0" preserveRatio="true">
                                  <image>
-                                    <Image url="@../../../store/StoreKeeper/src/icon/stockRed.png" />
+                                    <Image url="@../ico/sales-report.png" />
                                  </image>
                               </ImageView>
                            </graphic>
                         </Button>
-                        <Button contentDisplay="TOP" graphicTextGap="0.0" mnemonicParsing="false" prefHeight="112.0" prefWidth="139.0" GridPane.columnIndex="2">
+                        <Button id="rich-blue" contentDisplay="TOP" graphicTextGap="0.0" maxHeight="100.0" maxWidth="120.0" minHeight="100.0" minWidth="120.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="120.0" text="Ayarlar" GridPane.columnIndex="3">
                            <graphic>
-                              <ImageView fitHeight="60.0" fitWidth="55.0">
+                              <ImageView fitHeight="62.0" fitWidth="60.0" preserveRatio="true">
                                  <image>
-                                    <Image url="@../../../store/StoreKeeper/src/icon/sell2Red.png" />
+                                    <Image url="@../ico/web-management.png" />
                                  </image>
                               </ImageView>
                            </graphic>
                         </Button>
-                        <Button contentDisplay="TOP" graphicTextGap="0.0" mnemonicParsing="false" prefHeight="155.0" prefWidth="364.0" GridPane.columnIndex="3">
-                           <graphic>
-                              <ImageView fitHeight="40.0" fitWidth="40.0">
-                                 <image>
-                                    <Image url="@../../../store/StoreKeeper/src/icon/settingsRed.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                        </Button>
-                        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4">
+                        <AnchorPane id="dark-blue" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4">
                            <GridPane.margin>
                               <Insets />
                            </GridPane.margin>
@@ -86,7 +85,7 @@
                   </ToolBar>
                </bottom>
                <center>
-                  <Pane BorderPane.alignment="CENTER">
+                  <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
                      <children>
                         <StackPane fx:id="centerSP" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="385.0" prefWidth="818.0" />
                      </children>
